# Zing

./: .gitignore  README.md  deploy_launchpad.js  package-lock.json  package.json  test_invoke.js
.github/workflows/: contracts.yml  frontend.yml
contracts/: Cargo.toml
contracts/campaign/: Cargo.toml
contracts/campaign/src/: lib.rs
contracts/competition/: Cargo.toml
contracts/competition/src/: lib.rs
contracts/launchpad/: Cargo.toml
contracts/launchpad/src/: lib.rs  test_deployer.rs
contracts/prediction_market/: Cargo.toml
contracts/prediction_market/src/: lib.rs
contracts/scripts/: deploy.js  deploy_prediction.js  deployed.json  update_readme.js
contracts/smart_wallet/: Cargo.toml
contracts/smart_wallet/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/competitions/: client.tsx
src/app/contracts/: client.tsx  page.tsx
src/app/dashboard/: client.tsx  page.tsx
src/app/launch/: client.tsx  page.tsx
src/app/launch/create/: page.tsx
src/app/settings/: client.tsx
src/app/social-booster/: client.tsx
src/app/trade/: client.tsx  page.tsx
src/components/: app-background.tsx  app-sidebar.tsx  auth-provider.tsx  nav.tsx  portfolio-widget.tsx  quests-widget.tsx  sentiment-poll.tsx  trading-chart.tsx  wallet-provider.tsx  wallet-sidebar.tsx
src/components/ui/: glsl-hills.tsx  webgl-liquid.tsx
src/lib/: stellar-launch.ts  stellar-trade.ts  wallet.ts
supabase/migrations/: 20260718000000_auth_quests.sql
(+2 files in other folders)
