[workspace]
members = [
    "launchpad",
    "campaign",
    "competition",
    "smart_wallet", 
    "prediction_market",
    "token",
]
resolver = "2"

# Patch ethnum 1.5.0 locally — fixes transmute bug broken on Rust 1.80+
# soroban-env-host pins ethnum =1.5.0, and 1.5.0 is broken on stable Rust 1.80
[patch.crates-io]
ethnum = { path = "vendor/ethnum" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
